Adding two image icons (not finished)

--- a/src/app/components/autoForceLayout/autoForceLayout.css
+++ b/src/app/components/autoForceLayout/autoForceLayout.css
@@ -109,8 +109,9 @@
 .auto-force-layout .buttonsWrapper i.rmdi {
     background-color: lightgray;
     display: inline-block;
-    width: 6vh;
+    width: 5.5vh;
     height: 6vh;
+    margin: 0 1.5vh;
     mask-size: contain;
     -webkit-mask-size: contain;
 }
