Improving the component's event registration (not finished)

--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -2,10 +2,10 @@
 
     <div flex auto-force-layout
          options="ctrl.options"
-         on-hover="ctrl.onHoverOutside(item)"
-         on-select="ctrl.onSelectOutside()"
     >
     </div>
+    <!--on-hover="ctrl.onHoverOutside(item)"-->
+    <!--on-select="ctrl.onSelectOutside()"-->
 
     <div class="external-console" flex="30" layout="column">
         <div>
