--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -30,7 +30,7 @@
                             <th>id</th>
                             <th>label</th>
                         </tr>
-                        <tr md-virtual-repeat="node in ctrl.data[ctrl.NODES]"
+                        <tr md-virtual-repeat="node in ctrl.data[ctrl.NODES] | filter:{filtered:'!true'}"
                             ng-class='{hovered: node.hovered, selected: node.selected}'
                             class="repeated-item"
                             ng-mouseenter="ctrl.onHoverInside(node, true)"
@@ -52,7 +52,7 @@
                             <th>source</th>
                             <th>target</th>
                         </tr>
-                        <tr md-virtual-repeat="edge in ctrl.data[ctrl.EDGES]"
+                        <tr md-virtual-repeat="edge in ctrl.data[ctrl.EDGES] | filter:{filtered:'!true'}"
                             ng-class='{hovered: edge.hovered, selected: edge.selected}'
                             class="repeated-item"
                             ng-mouseenter="ctrl.onHoverInside(edge, true)"
