Rename: Force Horse (cont.)

--- a/src/app/views/viewForceHorse/viewForceHorse.html
+++ b/src/app/views/viewForceHorse/viewForceHorse.html
@@ -1,6 +1,6 @@
 <div id="view3" flex layout="row">
 
-    <div flex auto-force-layout
+    <div flex force-horse
          options="ctrl.options"
     >
     </div>
