--- a/demo-app/app/views/viewForceHorse/viewForceHorse.html
+++ b/demo-app/app/views/viewForceHorse/viewForceHorse.html
@@ -11,20 +11,20 @@
         <div>
             <!--<div layout="row" layout-padding="">Last hovered node = {{lastHoveredNode.label}}</div>-->
             <div layout="row" layout-margin="" layout-align="space-between center">
-                <label flex="" for="numOfNodes">Number of nodes:</label>
-                <input flex="" type="text" pattern="\d+" ng-model="ctrl.numOfNodes" size="4" title="number of nodes to generate">
-                <input flex="" type="range" id="numOfNodes" ng-model="ctrl.numOfNodes" min="10" max="1000">
-                <button flex="" ng-click="ctrl.createRandomGraph()">Create random graph</button>
+                <label flex="30" for="numOfNodes">Number of nodes:</label>
+                <input flex="15" type="text" pattern="\d+" ng-model="ctrl.numOfNodes" size="4" title="number of nodes to generate">
+                <input flex="15" type="range" id="numOfNodes" ng-model="ctrl.numOfNodes" min="10" max="1000">
+                <button flex="40" ng-click="ctrl.createRandomGraph()">Create random graph</button>
             </div>
             <div layout="row" layout-margin="" layout-align="start center">
-                <label flex="20" for="predefined-file-read">Predefined demo files:</label>
+                <label flex="30" for="predefined-file-read">Predefined demo files:</label>
                 <select flex="" id="predefined-file-read" ng-model="ctrl.predefinedFile" ng-change="ctrl.createGraphFromPredefinedFile()">
                     <option ng-repeat="fileName in ctrl.constants.PREDEFINED_FILES" value="{{fileName}}">{{fileName}}</option>
                 </select>
                 <!--<button flex="20" ng-click="ctrl.createGraphFromPredefinedFile()">Load file</button>-->
             </div>
             <div layout="row" layout-margin="" layout-align="start center">
-                <label flex="20" for="graph-data-file-read">Create graph from local file:</label>
+                <label flex="30" for="graph-data-file-read">Create graph from local file:</label>
                 <input flex="" type="file" id="graph-data-file-read" file-input-on-change="ctrl.createGraphFromFile">
             </div>
         </div>
