Adaptation to mobile

--- a/demo-app/app/views/viewForceHorse/viewForceHorse.html
+++ b/demo-app/app/views/viewForceHorse/viewForceHorse.html
@@ -1,4 +1,4 @@
-<div id="view3" flex layout="row">
+<div id="view3" flex layout="row" layout-sm="column">
 
     <div flex force-horse
          options="ctrl.options"
