--- a/components/forceHorse/forceHorse.css
+++ b/components/forceHorse/forceHorse.css
@@ -19,6 +19,8 @@
 .force-horse svg.graph-svg {
     box-sizing: border-box;
     position: absolute;
+    width: 100%;
+    height: 100%;
     max-width: 100%;
     max-height: 100%;
     /* margin-top: 5px; */
