fix(buttons): add mask no repeat

--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -30,6 +30,7 @@
       height: 6vh;
       margin: 0 1.5vh;
       mask-size: contain;
+      mask-repeat: no-repeat;
 
       &:hover {
         background-color: #000;
