feat(svg): add orphan node svg, and svg scaling by root

--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -57,7 +57,7 @@
       }
 
       &.img-orphan-nodes {
-        mask-image: url('assets/orphan-nodes.png');
+        mask-image: url('assets/orphan-nodes.svg');
       }
 
       &.img-filter {
